update tools